- added simple tests - optimised the code - global variable as storage
